# com.github.hoelzro-lua-linenoise

./: CMakeLists.txt  README.md  build_artifact.py  dependency_log_lua5.1.xml  dependency_log_lua5.1_examples.xml  dependency_log_lua5.4.xml  dependency_log_lua5.4_examples.xml
examples/: finalizer.lua  mini.lua  tool.lua
jonchki/: jonchkicfg.xml  jonchkihere.py  platform_detect.py
lua-linenoise/: CMakeLists.txt  __README__.txt  lua-linenoise.c
lua-linenoise/installer/lua5.1/: lua-linenoise-examples.xml  lua-linenoise.xml
lua-linenoise/installer/lua5.4/: lua-linenoise-examples.xml  lua-linenoise.xml
